# gradualelixir

./: .flake8  .gitignore  .iex.exs  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  Dockerfile  README.md  Walkthrough.md  aux.ex  aux_cast.ex  demo.json  docker-compose.yml  format.ex  generators.py  gradualelixir  gtests.py  gtypes.py  pyproject.toml  requirements.txt  resources.exs  sandbox.py  tests.py  utils.py
cli_examples/: big.ex  big_cast.ex  big_types_gradual.ex  big_types_static.ex  demo_cast.ex  demo_fun.ex  demo_fun_cast.ex  demo_fun_types_gradual.ex  demo_functional.ex  demo_gradual.ex  demo_gradual_cast.ex  demo_gradual_types.ex  demo_pattern.ex  demo_pattern_types_gradual.ex  demo_pattern_types_static.ex  demo_static.ex  demo_static_cast.ex
elixir_port/: .gitignore  demo.ex  elixir_port  mix.exs
elixir_port/lib/: ast_transformer.exs  cast.ex  demo.ex  elixir_port.ex  runner.exs
elixir_port/test/: cast_test.exs  elixir_port_test.exs
examples/arity/: program_1.ex  program_1_casts.ex  program_2.ex  program_2_casts.ex  program_2_casts_hijacked.ex
examples/composition/: program_1.ex  program_1_casts.ex  program_2.ex  program_2_casts.ex  program_3.ex  program_3_casts.ex  program_4.ex  program_4_casts.ex  program_5.ex  program_5_casts.ex  program_6.ex  program_6_casts.ex
examples/filter/: program_1.ex  program_1_casts.ex  program_1_types.ex  program_2.ex  program_2_casts.ex  program_2_types.ex
examples/function_call/: program_1.ex  program_1_casts.ex  program_2.ex  program_2_casts.ex
examples/map/: program_1.ex  program_1_casts.ex  program_1_types.ex  program_2.ex  program_2_casts.ex  program_2_types.ex  program_3.ex  program_3_casts.ex
examples/miscelanea/: mod_inv.ex  mod_inv_casts.ex  program_1.ex  program_1_casts.ex  program_1_types.ex  program_2.ex  program_2_casts.ex  program_2_types.ex  program_3.ex  program_3_casts.ex  program_4.ex  program_4_casts.ex  program_4_types.ex
gradualelixir/: .mypy.ini  cast.py  cli.py  elixir_port.py  expression.py  gtypes.py  jsonparser.py  module.py  pattern.py  utils.py
gradualelixir/tests/: test_pattern.py
src/: demo.json
src/gradualelixir/: __init__.py  cast.py  cli.py  console_init.py  elixir_port.py  exception.py  expression.py  formatter.py  gtypes.py  jsonparser.py  module.py  pattern.py  types.py  utils.py
src/gradualelixir/gtypes/: definitions.py  generators.py  generators_server.py  (+1 more)
tests/: test_gtypes.py  test_pattern.py  test_supremum.py
(+25 files in other folders)
